src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.input-design {
  @apply px-3 py-3.5 w-full text-sm rounded-[6px]
         bg-gray-100 text-gray-800 placeholder-gray-400
         border border-gray-300 
         hover:border-gray-400 
         focus:outline-none focus:border-primary focus:ring-2 focus:ring-primary/40 
         transition-all duration-200 ease-in-out;
}

.label-design {
  @apply block text-gray-600 font-medium;
}

/* .input-design {
  @apply px-3 py-2 border rounded-[4px] text-sm bg-white text-black focus:ring-2 focus:ring-primary w-full focus:outline-none;
} */

